Fix home page image issue on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -1327,6 +1327,20 @@ video {
   .about-intro {
     grid-column: 2/10;
     line-height: var(--line-height-medium);
+    margin-right: 1em;
+  }
+
+  .home-img {
+    width: 200px;
+    height: 200px;
+    float: left;
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    shape-margin: 0;
+    transform: scale(0.9);
+    -webkit-transform: scale(0.9);
   }
 
   .articles,
@@ -1455,7 +1469,7 @@ video {
   .intro-home {
     grid-column: 2/8;
     line-height: 1.8rem;
-    margin-top: 1em;
+    margin-top: 1em 2em 1em 1em;
     font-size: var(--font-size-article);
     font-weight: 600;
   }
